fixed experience/volunteering format on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -775,6 +775,7 @@ section .row span {
   }
 }
 #experience .experience-wrapper {
+  display: grid; /* added */
   grid-template-columns: 1fr 1fr;
   margin-top: 3.2rem;
 }
@@ -783,6 +784,10 @@ section .row span {
     padding-bottom: 5rem;
     grid-template-columns: 1fr;
     margin-top: 0rem;
+  }
+  #experience .experience-wrapper__image {
+    order: -1;
+    margin-bottom: 2rem;
   }
 }
 #experience .experience-wrapper__image {
